# electric-meter-visualizer

./: .flake8  .gitignore  .pre-commit-config.yaml  ConfigLoader.py  Database.py  ElectricMeter.py  ElectricMeterMockup.py  Logic.py  Makefile  Persistence.py  Plugin.py  PluginLoader.py  README.md  Webinterface.py  manage.py  pyproject.toml
.github/workflows/: python.yml
electric_meter_visualizer/: asgi.py  settings.py  urls.py  wsgi.py
electric_meter_visualizer/consumption_data_store/: consumption_data_store.py  influx.py  spi.py
electric_meter_visualizer/consumption_data_store/influx_query_templates/: custom_aggregate_window.j2  downsample_task.j2
static/: ChartRenderer.js
templates/: index.html
tests/electric_meter_visualizer/consumption_data_store/: test_influx_consumption_data_store.py
unit-test/: ConfigLoaderTest.py  DatabaseTest.py  ElectricMeterAPITest.py  LogicTest.py  PersistenceTest.py  PluginLoaderTest.py  WebApiAccessTest.py  WebApiBadRequestTest.py  WebinterfaceTest.py
unit-test/testplugins/: TestPlugin.py
