[tool.poetry]
name = "electric-meter-visualizer"
version = "0.1.0"
description = "Webapp to visualize the consumption of electricity over time"
authors = ["Laborratte5 <rirussi.rr@gmail.com>"]
readme = "README.md"
packages = [{include = "electric_meter_visualizer"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
influxdb-client = "^1.33.0"
optional-py = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
coverage = "^6.4.4"
mypy = "^0.971"
django-stubs = "^1.12.0"
pylint = "^2.15.3"
types-python-dateutil = "^2.8.19"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
[[tool.mypy.overrides]]
module = "influxdb_client.*"
ignore_missing_imports = "True"

[tool.pylint]
max-line-lenght = 88
disable = ["fixme"]
